and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

- January 15, 2015 J.Apostolakis (track-V10-00-06)
- Fixed FieldTrackUpdator to pass magnetic moment and PDG spin
  Is part of corrections needed for Bugzilla issue 1696.
     
- August 19, 2014 K. Genser (track-V10-00-04)
- Removed non cost requirement when using G4PhysicsModelCatalog getters and moved 
   implementations to icc file (requires global-V10-00-31)

- May  21,  2014 J.Apostolakis (track-V10-00-03)
- Fix G4FieldTrackUpdator to energy/momentum passed to field integration: 
   first set rest mass, then update kinetic energy. Problem affects 
   propagation in multiple geometries.

- Mar. 07,  2014 H.Kurashige (track-V10-00-02)
- Fix memory leak in G4Step::SetPre/PostStepPoint
 (Bug # 1583)

- Jan. 04, 2014 H.Kurashige (track-V10-00-00)
- modify message from CheckIt for G4VParticleChange and G4ParticleChangeForDecay  

- Nov. 21, 2013 H.Kurashige (track-V09-06-04)
- Fix Coverity deficts in G4Track constructors

- September 26, 2013 M.Asai (track-V09-06-03)
- Fix compilation warning caused by the previous tag.

- September 26, 2013 M.Asai (track-V09-06-02)
- Introduce CreatorModelIndex to G4Track and its access methods.

- April 10, 2013 G.Cosmo (track-V09-06-01)
- Cleanup of automatic changes for MT in classes in G4Track.
- Moved constructor and destructor of G4VelocityTable singleton to private.

- April 4, 2013 V.Ivanchenko (track-V09-06-00)
- G4ParticleChange - fixed bug #1451 - neutron do not change velocity 
    after elastic scattering; little clean up useful for MT
- G4ParticleChangeForEloss, G4ParticleChangeForGamma - clean up 
    computation of velocity (a little performance improvement expected) 
